--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="we_do.html">What we do</a>
+                                 <a class="nav-link" href="we_do.html">We sell pure dubai gold</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="portfolio.html">Portfolio </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="contact.html">Contact Us: +1(336)255 3434</a>
                               </li>
                            </ul>
                         </div>
